Fix vertical scroll on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -105,6 +105,9 @@ header {
     align-self: center;
     margin-bottom: 2rem;
   }
+  picture img {
+    max-width: 100%;
+  }
 }
 
 h2 {
